fixed some things on mobile

--- a/style.css
+++ b/style.css
@@ -6,11 +6,27 @@
     font-family: sans-serif;
 }
 
-body{
+body {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     background-image: linear-gradient(-45deg,
-    #0C2D48,#2E8BC0,#e1fcaf,#D2FBA4, #BFD7ED);
+        #0C2D48, #2E8BC0, #e1fcaf, #D2FBA4, #BFD7ED);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    filter: blur(10px);
+    transform: scale(1.05);
+    z-index: -1;
 }
 
 header{
@@ -30,12 +46,17 @@ header{
 
 .linkgit{
     float: right;
+    line-height: 25px;
+    padding-top: 3px;
+    
 }
 
 
 .github-logo{
     padding-right: 10px;
+    
     width: 25px;
+    
 
 }
 
@@ -50,12 +71,17 @@ header{
 
 }
 
+.github:hover{
+    cursor:pointer;
+}
+
 .saudacao{
     margin-top: 90px;
     text-align: center;
     font-size: 80px;
     font-family: 'Silkscreen', sans-serif;
     color: #1E2D2F;
+    padding-top: 35px;
 
 }
 
@@ -63,6 +89,7 @@ header{
     text-align: center;
     overflow: hidden;
     height: 50vh;
+    padding-top: 70px;
 }
 
 .pesquisa{
@@ -151,7 +178,7 @@ header{
 
 .rodape{
     font-family: 'Roboto', sans-serif;
-    font-size: large;
+    font-size: medium;
     display: flex;
     flex-direction: column;
     
@@ -171,9 +198,7 @@ header{
 
 }
 
-.github:hover{
-    cursor:pointer;
-}
+
 
 
 
@@ -192,24 +217,27 @@ header{
 }
 
 
-@media (max-width: 570px){
+@media (max-width: 580px){
 
     header{
         text-align: center;
         height: 7vh;
         flex-direction: column;
         padding-top: 2px;
+        line-height: 35px;
         
     }
 
     .home{
         float: none;
 
+
     }
 
     .linkgit{
         align-items: flex-end;
         float: none;
+        
 
     }
 
@@ -221,39 +249,43 @@ header{
 
     .github{
         
-        font-size: 20px;
+        font-size: 18px;
         float: none;
+        
     }
 
 
     .saudacao{
         font-size: 60px;
+        padding-top: 30px;
     }
 
     .centro{
+        
         margin-top: 40px;
     }
 
-    .pesquisa_google{
-        width: 55%;
+    .pesquisa{
+        font-size: large;
+        width: 80vw;
     }
 
 
-    .pesquisa_bing{
-        width: 55%;
-    }
+
 
     .caixa{
-       flex-direction: column;
+        flex-direction: column;
         float: none;
+        
     }
 
     .botoes{
         flex-direction: column;
+        
     }
 
     .botao{
-        width: 70%;
+        width: 20vw;
         font-size: 14px;
     }
     
